--- a/showme.html
+++ b/showme.html
@@ -30,7 +30,33 @@
 	<h1>Directory Tree</h1><p>
 	<a href=".">.</a><br>
 	├── [&nbsp;158]&nbsp;&nbsp;<a href="./README.md">README.md</a><br>
-	├── [383M]&nbsp;&nbsp;<a href="./audio_books/">audio_books</a><br>
+	├── [1.4G]&nbsp;&nbsp;<a href="./audio_books/">audio_books</a><br>
+	│   ├── [1017M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/">Dai Nam Di Truyen</a><br>
+	│   │   ├── [&nbsp;36M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/01.mp3">01.mp3</a><br>
+	│   │   ├── [&nbsp;49M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/02.mp3">02.mp3</a><br>
+	│   │   ├── [&nbsp;46M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/03.mp3">03.mp3</a><br>
+	│   │   ├── [&nbsp;34M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/04.mp3">04.mp3</a><br>
+	│   │   ├── [&nbsp;44M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/05.mp3">05.mp3</a><br>
+	│   │   ├── [&nbsp;37M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/06.mp3">06.mp3</a><br>
+	│   │   ├── [&nbsp;49M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/07.mp3">07.mp3</a><br>
+	│   │   ├── [&nbsp;55M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/08.mp3">08.mp3</a><br>
+	│   │   ├── [&nbsp;23M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/09.mp3">09.mp3</a><br>
+	│   │   ├── [&nbsp;29M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/10.mp3">10.mp3</a><br>
+	│   │   ├── [&nbsp;21M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/11.mp3">11.mp3</a><br>
+	│   │   ├── [&nbsp;34M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/12.mp3">12.mp3</a><br>
+	│   │   ├── [&nbsp;58M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/13.mp3">13.mp3</a><br>
+	│   │   ├── [&nbsp;33M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/14.mp3">14.mp3</a><br>
+	│   │   ├── [&nbsp;33M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/15.mp3">15.mp3</a><br>
+	│   │   ├── [&nbsp;30M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/16.mp3">16.mp3</a><br>
+	│   │   ├── [&nbsp;39M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/17.mp3">17.mp3</a><br>
+	│   │   ├── [&nbsp;33M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/18.mp3">18.mp3</a><br>
+	│   │   ├── [&nbsp;37M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/19.mp3">19.mp3</a><br>
+	│   │   ├── [&nbsp;54M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/20.mp3">20.mp3</a><br>
+	│   │   ├── [&nbsp;67M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/21-22-23.mp3">21-22-23.mp3</a><br>
+	│   │   ├── [&nbsp;51M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/24.mp3">24.mp3</a><br>
+	│   │   ├── [&nbsp;51M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/25.mp3">25.mp3</a><br>
+	│   │   ├── [&nbsp;57M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/26.mp3">26.mp3</a><br>
+	│   │   └── [&nbsp;15M]&nbsp;&nbsp;<a href="./audio_books/Dai%20Nam%20Di%20Truyen/27.mp3">27.mp3</a><br>
 	│   └── [383M]&nbsp;&nbsp;<a href="./audio_books/Ly%20Trieu%20Di%20Truyen/">Ly Trieu Di Truyen</a><br>
 	│   &nbsp;&nbsp;&nbsp; ├── [9.4M]&nbsp;&nbsp;<a href="./audio_books/Ly%20Trieu%20Di%20Truyen/01.mp3">01.mp3</a><br>
 	│   &nbsp;&nbsp;&nbsp; ├── [9.0M]&nbsp;&nbsp;<a href="./audio_books/Ly%20Trieu%20Di%20Truyen/02.mp3">02.mp3</a><br>
@@ -73,7 +99,7 @@
 	</p>
 	<p>
 
- 383M used in 2 directories, 38 files
+ 1.4G used in 3 directories, 63 files
 	<br><br>
 	</p>
 	<hr>
